# Buechli

./: .gitignore  LICENSE  README.md  compose.yaml  env.example  pyproject.toml
src/buechli_chat/: __init__.py  app.py  buechli_graph.py  types.py  web.py
src/ingest/: __init__.py  ingest.py
src/util/: debug_cache.py  utils.py
